src/main/kotlin/com/example/kotlin_practice/global/error/exception/BusinessException.kt
package com.example.kotlin_practice.global.error.exception

abstract class BusinessException(
    val errorCode: ErrorCode
) : RuntimeException()
